# diplomaProject

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 983a80825b8e_init_db_3.py  b29cb83b027b_init_db.py
backend/alimbic/: env.py
backend/src/models/: role.py  user.py
services/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start_backend.py
services/backend/alembic/: env.py
services/backend/alembic/versions/: ceef144a005e_init_db_2.py  e73285e8e499_init.py
services/backend/src/: config.py  database.py  main.py
services/backend/src/about_college/: router.py
services/backend/src/auth/: dependencies.py  models.py  router.py  schemas.py
services/backend/src/entrant/: router.py  schemas.py
services/backend/src/news/: models.py  router.py  schemas.py
services/backend/src/posts/: router.py  schemas.py
services/backend/src/student/: router.py  schemas.py
services/backend/src/teaching_staff/: router.py
services/backend/src/users/: dependencies.py  models.py  router.py  schemas.py
services/backend/src/vacancy/: router.py  schemas.py
services/frontend/: package-lock.json
services/nginx/: nginx-setup.conf
