[tool.poetry]
name = "college-site"
version = "0.1.0"
description = "Site for my college"
authors = ["Vyacheslav Yudin <valentingullll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.88.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
