[tool.poetry]
name = "college-site"
version = "0.1.0"
description = "Site for my college"
authors = ["Vyacheslav Yudin <valentingullll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.88.0"}
SQLAlchemy = "^1.4.46"
alembic = "^1.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
runserver = "uvicorn main:application --host 0.0.0.0 --port 49567 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
