[tool.poetry]
name = "collegesite"
version = "0.1.0"
description = "Site for my college"
authors = ["Vyacheslav Yudin <valentingullll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.88.0"}
SQLAlchemy = "^1.4.46"
alembic = "^1.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
startserver = "backend.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"