[tool.poetry]
name = "college-site"
version = "0.1.2"
description = "SITE FOR COLLEGE GAPOU SO AMT"
authors = ["fernandoveragul <valentingullll@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.8"
fastapi = {extras = ["all"], version = "^0.88.0"}
alembic = "^1.9.1"
databases = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
