[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend part of college site"
authors = ["fernandoveragul <valentingullll@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
email-validator = "^1.3.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
