[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend part of college site"
authors = ["fernandoveragul <valentingullll@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
email-validator = "^1.3.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = "^2.0.1"
alembic = "^1.9.2"
asyncpg = "^0.27.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
